[package]
name = "wasmito-addr2line"
version = "0.1.0"
edition = "2024"

description = "A crate to generate source mappings, focussing on JS availability"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aaronmunsters/wasmito-addr2line"
readme = "README.md"
keywords = ["wasm", "dwarf", "source-mappings"]
categories = [
    "development-tools::debugging",
    "wasm",
    "web-programming",
    "compilers",
    "encoding",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
