
[package]
name = "wasmito-strip"
version = "0.1.0"
edition = "2024"

description = "A crate to strip custom sections from a wasm binary"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aaronmunsters/wasmito-tools"
readme = "README.md"
keywords = ["wasm", "dwarf", "source-mappings"]
categories = [
    "development-tools::debugging",
    "wasm",
    "web-programming",
    "compilers",
    "encoding",
]

[dependencies]

# TODO: check what is required
regex = { version = "1.6.0" }
wasm-encoder = { version = "0.240.0", features = ["std"] }

thiserror = { version = "2" }
wasm-tools = { version = "1.240.0" }
wat = { version = "1.240.0", features = ["dwarf"] }
wasmparser = "0.240.0"

[dependencies.addr2line] # locked to that of `wat`, to ensure equal type
version = "0.24.2"
